...
                              style: TextStyle(fontWeight: FontWeight.bold),
                            ),
                          ),
                          Expanded(
                            flex: 2,
                            child: ElevatedButton(
                              key: const Key("startDateButton"),
                              onPressed: () async {
                                DateTime? pickedDate =
                                    await _selectDate(context);
                                if (pickedDate != null) {
                                  setState(() {
                                    widget._course.startDate = pickedDate;
...
                              style: TextStyle(fontWeight: FontWeight.bold),
                            ),
                          ),
                          Expanded(
                            flex: 2,
                            child: ElevatedButton(
                              key: const Key("endDateButton"),
                              onPressed: () async {
                                DateTime? pickedDate =
                                    await _selectDate(context);
                                if (pickedDate != null) {
                                  setState(() {
                                    widget._course.endDate = pickedDate;
...
                              style: TextStyle(fontWeight: FontWeight.bold),
                            ),
                          ),
                          Expanded(
                              flex: 2,
                              child: DropdownButtonFormField<Weekday>(
                                key: const Key("lectureWeekDayDropdownButton"),
                                value: widget._course.lectureWeekday,
                                decoration: const InputDecoration(
                                  hintText: "Please select the lecture day",
                                ),
                                onChanged: (Weekday? newValue) {
                                  if (newValue != null) {
...
                              style: TextStyle(fontWeight: FontWeight.bold),
                            ),
                          ),
                          Expanded(
                            flex: 2,
                            child: ElevatedButton(
                              key: const Key("lectureStartTimeButton"),
                              onPressed: () async {
                                TimeOfDay? pickedTime =
                                    await _selectTime(context);
                                if (pickedTime != null) {
                                  setState(() {
                                    widget._course.lectureStartTime =
...
                              style: TextStyle(fontWeight: FontWeight.bold),
                            ),
                          ),
                          Expanded(
                            flex: 2,
                            child: ElevatedButton(
                              key: const Key("lectureEndTimeButton"),
                              onPressed: () async {
                                TimeOfDay? pickedTime =
                                    await _selectTime(context);
                                if (pickedTime != null) {
                                  setState(() {
                                    widget._course.lectureEndTime = pickedTime;
...
            ),

            // Save button:
            Padding(
              padding: const EdgeInsets.all(8.0),
              child: ElevatedButton(
                key: const Key("updateButton"),
                onPressed: () => _onUpdateClicked(context),
                child: const Text("Update"),
              ),
            ),
          ]),
        ),
...
