...
                ),

                const SizedBox(height: 20),

                // username text field
                TextField(
                  key: const Key('usernameTextField'),
                  controller: usernameController,
                  decoration: const InputDecoration(
                    labelText: 'Enter your name',
                    border: OutlineInputBorder(),
                  ),
                ),

                // Login button
                LoginButton(
                  key: const Key('loginButton'),
                  icon: FontAwesomeIcons.rightToBracket,
                  text: 'Login',
                  loginMethod: () async {
                    BuildContext initialContext = context;
                    AppSettings appSettings =
                        Provider.of<AppSettings>(context, listen: false);
...
